--- a/app/views/credential/index.html.erb
+++ b/app/views/credential/index.html.erb
@@ -38,7 +38,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
   <p class="w3-xlarge"></p>
 </br>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">   Add or modify a password</button>
-  <%= form_for :password do  |f| %>
+  <%= form_for :credential do  |f| %>
     <p>
       <%= f.label :website %><br>
       <%= f.text_field :website %>
