99 little bugs in the code, 99 little bugs

--- a/app/views/credential/index.html.erb
+++ b/app/views/credential/index.html.erb
@@ -38,10 +38,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
   <p class="w3-xlarge"></p>
 </br>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">   Add or modify a password</button>
-  <%= form_for :credential do  |f| %>
+  <%= form_for @credential, url: {action: "create"} do  |f| %>
     <p>
       <%= f.label :website %><br>
-      <%= f.text_field :website %>
+      <%= f.text_field :website %><br>
     </p>
 
     <p>
@@ -59,7 +59,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
       <%= f.text_field :tag %>
     </p>
     <p>
-      <%= f.submit %>
+      <%= f.submit "create" %>
     </p>
   <% end %>
 
