--- a/app/views/credential/index.html.erb
+++ b/app/views/credential/index.html.erb
@@ -38,22 +38,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
   <p class="w3-xlarge"></p>
 </br>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">   Add or modify a password</button>
-  <%= form_for @credential, url: {action: "create"} do  |f| %>
+  <%= form_for :credential, url: {action: "create"} do  |f| %>
     <p>
       <%= f.label :website %><br>
       <%= f.text_field :website %><br>
     </p>
-
     <p>
       <%= f.label :username %><br>
       <%= f.text_field :username %>
     </p>
-
     <p>
       <%= f.label :password %><br>
       <%= f.text_field :password %>
     </p>
-
     <p>
       <%= f.label :tag %><br>
       <%= f.text_field :tag %>
