for loop to show saved stuff not working

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -38,22 +38,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
   <p class="w3-xlarge"></p>
 </br>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">   Add or modify a password</button>
-  <%= form_for :credential do |f| %>
+  <%= form_for :credentials do |f| %>
     <p>
       <%= f.label :website %><br>
-
+      <%= f.text_field :website %>
     </p>
     <p>
       <%= f.label :username %><br>
-
+      <%= f.text_field :username %>
     </p>
     <p>
       <%= f.label :password %><br>
-
+      <%= f.text_field :password %>
     </p>
     <p>
       <%= f.label :tag %><br>
-    
+      <%= f.text_field :tag %>
     </p>
     <p>
       <%= f.submit "create" %>
@@ -67,12 +67,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
 
-      <% for credential in @credential do %>
 
-      <tr>
-        <th><%= credential.website %>&nbsp;</th>
-        <th><%= credential.username %>&nbsp;</th>
-        <th><%= credential.password %>&nbsp;</th>
-        <th><%= credential.tag %>&nbsp;</th>
-      </tr>
-      <% end %>
+
+          <tr><%= @credentials.website %></tr>&nbsp;
+          <tr><%= @credentials.username %></tr>&nbsp;
+          <tr><%= @credentials.password %></tr>&nbsp;
+          <tr><%= @credentials.tag %></tr>
+        </th>
+      </p>
+  
