--- a/app/views/credentials/show.html.erb
+++ b/app/views/credentials/show.html.erb
@@ -2,9 +2,9 @@
 <p>
   <th>
 
-    <tr><%= @credential.website %></tr>&nbsp;
-    <tr><%= @credential.username %></tr>&nbsp;
-    <tr><%= @credential.password %></tr>&nbsp;
-    <tr><%= @credential.tag %></tr>
+    <tr><%= @credentials.website %></tr>&nbsp;
+    <tr><%= @credentials.username %></tr>&nbsp;
+    <tr><%= @credentials.password %></tr>&nbsp;
+    <tr><%= @credentials.tag %></tr>
   </th>
 </p>
