--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
     <div class="w3-bar w3-red w3-card-2 w3-left-align w3-large">
     </div>
     <div>
-    <%= link_to 'My Passwords', controller: 'credential' %>
+    <%= link_to 'My Passwords', controller: 'credentials' %>
   </div>
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
