this works but will not show saved info on index

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -68,11 +68,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
     <div class="w3-twothird">
 
 
-
+<% if false %>
           <tr><%= @credentials.website %></tr>&nbsp;
           <tr><%= @credentials.username %></tr>&nbsp;
           <tr><%= @credentials.password %></tr>&nbsp;
           <tr><%= @credentials.tag %></tr>
         </th>
       </p>
-  
+  <% end %>
