--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -38,10 +38,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
   <p class="w3-xlarge"></p>
 </br>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">   Add or modify a password</button>
-  <%= form_for :credentials do |f| %>
+  <% if false %>
+  <%= form_for :credentials, url: credentials_path(@credentials) do |f| %>
     <p>
       <%= f.label :website %><br>
-      <%= f.text_field :website %>
+      <%= f.text_area :website %>
     </p>
     <p>
       <%= f.label :username %><br>
@@ -59,6 +60,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
       <%= f.submit "create" %>
     </p>
   <% end %>
+  <% end %>
 
 </header>
 
@@ -69,10 +71,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
 
 
 <% if false %>
-          <tr><%= @credentials.website %></tr>&nbsp;
-          <tr><%= @credentials.username %></tr>&nbsp;
-          <tr><%= @credentials.password %></tr>&nbsp;
-          <tr><%= @credentials.tag %></tr>
+          <% :credentials.each do |credentials| %>
+          <tr><%= credentials.website %></tr>&nbsp;
+          <tr><%= credentials.username %></tr>&nbsp;
+          <tr><%= credentials.password %></tr>&nbsp;
+          <tr><%= credentials.tag %></tr>
         </th>
       </p>
-  <% end %>
+      <% end %>
+<% end %>
