forms now work. save as nil

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -38,11 +38,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
   <p class="w3-xlarge"></p>
 </br>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">   Add or modify a password</button>
-  <% if false %>
-  <%= form_for :credentials, url: credentials_path(@credentials) do |f| %>
+
+  <%= form_for :credential, url: credentials_path(@credentials) do |f| %>
     <p>
       <%= f.label :website %><br>
-      <%= f.text_area :website %>
+      <%= f.text_field :website %>
     </p>
     <p>
       <%= f.label :username %><br>
@@ -60,7 +60,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
       <%= f.submit "create" %>
     </p>
   <% end %>
-  <% end %>
+
 
 </header>
 
