IT WORKS! Mostly. It displays the added info

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -39,7 +39,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
 </br>
   <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">   Add or modify a password</button>
 
-  <%= form_for :credential, url: credentials_path(@credentials) do |f| %>
+  <%= form_for :credential do |f| %>
     <p>
       <%= f.label :website %><br>
       <%= f.text_field :website %>
@@ -69,14 +69,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
 
+      <h1>All your Logins</h1>
+
+      <table>
+        <tr>
+          <th>Title</th>
+          <th>Text</th>
+        </tr>
+
+        <% @credentials.each do |credentials| %>
+          <tr>
+            <tr><%= credentials.website %></tr>&nbsp;
+            <tr><%= credentials.username %></tr>&nbsp;
+            <tr><%= credentials.password %></tr>&nbsp;
+            <tr><%= credentials.tag %></tr>
+          </tr>
+        <% end %>
+      </table>
+
 
 <% if false %>
-          <% :credentials.each do |credentials| %>
-          <tr><%= credentials.website %></tr>&nbsp;
-          <tr><%= credentials.username %></tr>&nbsp;
-          <tr><%= credentials.password %></tr>&nbsp;
-          <tr><%= credentials.tag %></tr>
+          <% :credential.each do |credentials| %>
+          <tr><%= credential.website %></tr>&nbsp;
+          <tr><%= credential.username %></tr>&nbsp;
+          <tr><%= credential.password %></tr>&nbsp;
+          <tr><%= credential.tag %></tr>
         </th>
       </p>
-      <% end %>
+<% end %>
 <% end %>
