submitting the form throws error

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -37,7 +37,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
   <h1 class="w3-margin w3-jumbo">Mange Your Passwords</h1>
   <p class="w3-xlarge"></p>
 </br>
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">   Add or modify a password</button>
 
   <%= form_for :credential do |f| %>
     <p>
@@ -57,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
       <%= f.text_field :tag %>
     </p>
     <p>
-      <%= f.submit "create" %>
+      <%= f.submit "Add a Password" %>
     </p>
   <% end %>
 
@@ -70,12 +69,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
     <div class="w3-twothird">
 
       <h1>All your Logins</h1>
-
-      <table>
-        <tr>
-          <th>Title</th>
-          <th>Text</th>
-        </tr>
 
         <% @credentials.each do |credentials| %>
           <tr>
