--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -72,10 +72,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
 
         <% @credentials.each do |credentials| %>
           <tr>
-            <tr><%= credentials.website %></tr>&nbsp;
-            <tr><%= credentials.username %></tr>&nbsp;
-            <tr><%= credentials.password %></tr>&nbsp;
-            <tr><%= credentials.tag %></tr>
+            <tr><%= @credentials.website %></tr>&nbsp;
+            <tr><%= @credentials.username %></tr>&nbsp;
+            <tr><%= @credentials.password %></tr>&nbsp;
+            <tr><%= @credentials.tag %></tr>
           </tr>
         <% end %>
       </table>
