--- a/app/views/credentials/show.html.erb
+++ b/app/views/credentials/show.html.erb
@@ -1,4 +1,8 @@
+
+    <strong> Passwords: </strong>
     <tr><%= @credentials.website %></tr>&nbsp;
     <tr><%= @credentials.username %></tr>&nbsp;
     <tr><%= @credentials.password %></tr>&nbsp;
     <tr><%= @credentials.tag %></tr>
+    <p>
+<%=  link_to 'credentials', controller: 'credentials'  %>
