--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -67,13 +67,36 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-<% if false %>
       <h1>All your Logins</h1>
-          <tr>
-            <tr><%= @credentials.website %></tr>&nbsp;
-            <tr><%= @credentials.username %></tr>&nbsp;
-            <tr><%= @credentials.password %></tr>&nbsp;
-            <tr><%= @credentials.tag %></tr>
-          </tr>
+        <table>
+          <td>
+          <th> Website </th>
+          <th> Username </th>
+          <th> Password </th>
+          <th> Tag </th>
+        </td>
+
+        <%  @credentials.each do |c| %>
+            <td><%= c.website %></td>
+            <td><%= c.username %></td>
+            <td><%= c.password %></td>
+            <td><%= c.tag %></td>
+            <% end %>
+
       </table>
+
+
+<% if false %>
+<table>
+  <tr>
+    <th>name</th>
+    <th>surname</th>
+  </tr>
+  <tr>
+    <% @students.each do |s| %>
+      <td><%= s.name %></td>
+      <td><%= s.surname %></td>
+    <% end %>
+  </tr>
+</table>
 <% end %>
