got all records to show correctly in the table on .show

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -1,42 +1,23 @@
-<!DOCTYPE html>
-<html>
-<title>MultiPass!</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-.fa-facebook {font-size: 200px}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <title>MultiPass!</title>
+  </head>
+  <body class="App-body">
 
-
-</style>
-<body>
+    <div id="root"></div>
+  </body>
+</html>
 
 <!-- Navbar -->
-<div class="w3-top">
-  <% if false %>
-    <div class="w3-bar w3-red w3-card-2 w3-left-align w3-large">
-      <%= link_to 'welcome', controller: 'welcome' %>
-      <% link_to 'passwords', controller: 'passwords' %>
-    </div>
 
-    <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <%= link_to 'welcome', controller: 'welcome' %>
-      <% link_to 'passwords', controller: 'passwords' %>
-    </div>
-</div>
-<% end %>
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:43px 16px">
-  <h1 class="w3-margin w3-jumbo">Mange Your Passwords</h1>
-  <p class="w3-xlarge"></p>
-</br>
+<div class = "App-header">
+  <h1>Manage Your Passwords</h1>
+</div>
 
   <%= form_for :credential  do |f| %>
     <p>
@@ -67,22 +48,28 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Helvetica", sans-serif}
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>All your Logins</h1>
+      <h1>Your Crednetials</h1>
+      <h5> (Your secret is safe with me!)</h5>
         <table>
-          <td>
-          <th> Website </th>
-          <th> Username </th>
-          <th> Password </th>
-          <th> Tag </th>
-        </td>
-
-        <%  @credentials.each do |c| %>
+          <tr>
+            <th> Website </th>
+            <th> Username </th>
+            <th> Password </th>
+            <th> Tag </th>
+            <th colspan="2"></th>
+          </tr>
+          <%  @credentials.each do |c| %>
+          <tr>
             <td><%= c.website %></td>
             <td><%= c.username %></td>
             <td><%= c.password %></td>
             <td><%= c.tag %></td>
-            <% end %>
-
+            <td><%= link_to 'Edit', edit_credential_path(@credentials) %></td>
+            <td><%= link_to 'Destroy', edit_credential_path(@credentials),
+                    mthod: :delete,
+                    data: {confirm: "Are you sure?"}%></td>
+          </tr>
+        <% end %>
       </table>
 
 
