--- a/app/views/credentials/new.html.erb
+++ b/app/views/credentials/new.html.erb
@@ -1,17 +1,26 @@
+<div class= 'App-body'>
+  <%= form_for :credentials, credentials_path do  |f| %>
+    <p>
+      <%= f.label :website %><br>
+      <%= f.text_field :website %>
+    </p>
 
+    <p>
+      <%= f.label :username %><br>
+      <%= f.text_field :username %>
+    </p>
 
-    <tr><%= @credentials.website %></tr>&nbsp;
-    <tr><%= @credentials.username %></tr>&nbsp;
-    <tr><%= @credentials.password %></tr>&nbsp;
-    <tr><%= @credentials.tag %></tr>
-  </th>
+    <p>
+      <%= f.label :password %><br>
+      <%= f.text_field :password %>
+    </p>
 
-  <% if false %>
-
-<tr>
-  <th><%= credential.website %>&nbsp;</th>
-  <th><%= credential.username %>&nbsp;</th>
-  <th><%= credential.password %>&nbsp;</th>
-  <th><%= credential.tag %>&nbsp;</th>
-</tr>
-<% end %>
+    <p>
+      <%= f.label :tag %><br>
+      <%= f.text_field :tag %>
+    </p>
+    <p>
+      <%= f.submit %>
+    </p>
+  <% end %>
+</div>
