--- a/app/views/credentials/show.html.erb
+++ b/app/views/credentials/show.html.erb
@@ -1,8 +1,57 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <title>MultiPass!</title>
+  </head>
+  <body class="App-body">
 
-    <strong> Passwords: </strong>
-    <tr><%= @credentials.website %></tr>
-    <tr><%= @credentials.username %></tr>
-    <tr><%= @credentials.password %></tr>
-    <tr><%= @credentials.tag %></tr>
-    <p>
+    <div id="root"></div>
+  </body>
+</html>
+
+<!-- Header -->
+<div class = "App-header">
+  <h1>MultiPass!</h1>
+  <h2 class="">Here are your saved passwords. (Your secret is safe with me!)</h2>
+</div>
+
+<!-- Body -->
+
+<strong> Passwords: </strong>
+  <tr><%= @credentials.website %></tr>
+  <tr><%= @credentials.username %></tr>
+  <tr><%= @credentials.password %></tr>
+  <tr><%= @credentials.tag %></tr>
 <%=  link_to 'credentials', controller: 'credentials'  %>
+
+<!-- Footer -->
+
+<div class = "App-footer">
+  <p class="navbar-text pull-right">
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+    <% end %>
+  </p>
+</div>
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+  function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+    }
+</script>
+
+</body>
+</html>
