cleaned up index.html.erb

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -15,75 +15,31 @@
 <!-- Navbar -->
 
 <!-- Header -->
-<div class = "App-header">
-  <h1>Manage Your Passwords</h1>
+<div class="App-header">
+  <h1>Your Crednetials</h1>
+  <h5> (Your secret is safe with me!)</h5>
 </div>
-
-  <%= form_for :credential  do |f| %>
-    <p>
-      <%= f.label :website %><br>
-      <%= f.text_field :website %>
-    </p>
-    <p>
-      <%= f.label :username %><br>
-      <%= f.text_field :username %>
-    </p>
-    <p>
-      <%= f.label :password %><br>
-      <%= f.text_field :password %>
-    </p>
-    <p>
-      <%= f.label :tag %><br>
-      <%= f.text_field :tag %>
-    </p>
-    <p>
-      <%= f.submit "Add a Password" %>
-    </p>
-  <% end %>
-
-
-</header>
-
-<!-- First Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Your Crednetials</h1>
-      <h5> (Your secret is safe with me!)</h5>
-        <table>
-          <tr>
-            <th> Website </th>
-            <th> Username </th>
-            <th> Password </th>
-            <th> Tag </th>
-            <th colspan="2"></th>
-          </tr>
-          <%  @credentials.each do |c| %>
-          <tr>
-            <td><%= c.website %></td>
-            <td><%= c.username %></td>
-            <td><%= c.password %></td>
-            <td><%= c.tag %></td>
-            <td><%= link_to 'Edit', edit_credential_path(@credentials) %></td>
-            <td><%= link_to 'Destroy', edit_credential_path(@credentials),
-                    mthod: :delete,
-                    data: {confirm: "Are you sure?"}%></td>
-          </tr>
-        <% end %>
-      </table>
-
-
-<% if false %>
-<table>
-  <tr>
-    <th>name</th>
-    <th>surname</th>
-  </tr>
-  <tr>
-    <% @students.each do |s| %>
-      <td><%= s.name %></td>
-      <td><%= s.surname %></td>
-    <% end %>
-  </tr>
-</table>
-<% end %>
+<!-- Body -->
+<div class="App-body">
+  <table>
+    <tr>
+      <th> Website </th>
+      <th> Username </th>
+      <th> Password </th>
+      <th> Tag </th>
+      <th colspan="2"></th>
+    </tr>
+      <%  @credentials.each do |c| %>
+    <tr>
+      <td><%= c.website %></td>
+      <td><%= c.username %></td>
+      <td><%= c.password %></td>
+      <td><%= c.tag %></td>
+      <td><%= link_to 'Edit', edit_credential_path(@credentials) %></td>
+      <td><%= link_to 'Destroy', edit_credential_path(@credentials),
+            mthod: :delete,
+            data: {confirm: "Are you sure?"}%></td>
+    </tr>
+      <% end %>
+  </table>
+</div>
