added edit view, still broke af

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -6,16 +6,8 @@
     <meta name="theme-color" content="#000000">
     <title>MultiPass!</title>
   </head>
-  <body class="App-body">
-
-    <div id="root"></div>
-  </body>
-</html>
-
-<!-- Navbar -->
-
 <!-- Header -->
-<div class="App-header">
+<div class="App-header App">
   <h1>Your Crednetials</h1>
   <h5> (Your secret is safe with me!)</h5>
 </div>
@@ -29,14 +21,14 @@
       <th> Tag </th>
       <th colspan="2"></th>
     </tr>
-      <%  @credentials.each do |c| %>
+      <% @credentials.each do |c| %>
     <tr>
       <td><%= c.website %></td>
       <td><%= c.username %></td>
       <td><%= c.password %></td>
       <td><%= c.tag %></td>
-      <td><%= link_to 'Edit', edit_credential_path(@credentials) %></td>
-      <td><%= link_to 'Destroy', edit_credential_path(@credentials),
+      <td><%= link_to 'Edit', edit_credential_path(:credentials) %></td>
+      <td><%= link_to 'Destroy', edit_credential_path(:credentials),
             mthod: :delete,
             data: {confirm: "Are you sure?"}%></td>
     </tr>
