still no method error when edit

--- a/app/views/credentials/edit.html.erb
+++ b/app/views/credentials/edit.html.erb
@@ -13,7 +13,7 @@
 </div>
 <!-- Body -->
 <div class="App-body">
-  <%= form_for :credentials, url: credentials_path(@credentials), method: :pach do |f| %>
+  <%= form_for :credentials, url: credentials_path(@credentials), method: :patch do |f| %>
     <p>
       <%= f.label :website %>
       <%= f.text_field :website %>
