added the css stuff. still brooke af

--- a/app/views/credentials/index.html.erb
+++ b/app/views/credentials/index.html.erb
@@ -27,10 +27,8 @@
       <td><%= c.username %></td>
       <td><%= c.password %></td>
       <td><%= c.tag %></td>
-      <td><%= link_to 'Edit', edit_credential_path(:credentials) %></td>
-      <td><%= link_to 'Destroy', edit_credential_path(:credentials),
-            mthod: :delete,
-            data: {confirm: "Are you sure?"}%></td>
+      <td><%= link_to 'Edit', method: :edit %></td>
+      <td><%= link_to 'Destroy', method: :delete, data: { confirm: 'Are you sure?'} %></td>
     </tr>
       <% end %>
   </table>
