--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
+
   <title>MultiPass3</title>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
-  <% if notice %>
-    <p class="alert alert-success"><%= notice %></p>
-  <% end %>
-  <% if alert %>
-    <p class="alert alert-danger"><%= alert %></p>
-  <% end %>
-<%= yield %>
-
+  <div id= "main-container" class="container">
+   <div class="row">
+     <div class="row">
+      <div class="col-xs-12">
+       <% flash.each do |name, msg| -%>
+        <%= content_tag :div, msg, class: "alert alert-#{name}" %>
+       <% end -%>
+      </div>
+    </div>
+  <div class="col-xs-3">
+   </div>
+    <table class="table-bordered">
+     <%= yield %>
+    </table>
+   </div>
+  </div>
 </body>
 </html>
